tests/NormalTests/paczka1/small_fuzzy/71159696.err
Error in line 2: S194 S194 69,9
Error in line 6: ICN7rZ A543 19,6
